ferritin/src/snapshots/ferritin__tests__get_struct_with_source_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct\").with_source(),\nOutputMode :: Tty, & get_fixture_crate_path ())"
---
Item: TestStruct
Kind: Struct
Visibility: Public
Defined at: [fixture_crate](https://docs.rs/fixture-crate/0.1.0/fixture_crate/index.html)::[TestStruct](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html)
In crate: fixture-crate (0.1.0)

A simple struct for testing basic functionality.

This struct demonstrates basic usage patterns and should show completely since
it only has one paragraph of documentation.

It uses [Vector](https://doc.rust-lang.org/nightly/alloc/vec/index.html?search=alloc%3A%3Avec%3A%3AVec) for testing intra-doc link resolution with renamed imports. Also
tests [HashMap](https://doc.rust-lang.org/nightly/std/collections/hash/map/index.html?search=std%3A%3Acollections%3A%3Ahash%3A%3Amap%3A%3AHashMap) which is a non-renamed import.

struct TestStruct {
    pub field: [String](https://doc.rust-lang.org/nightly/alloc/string/struct.String.html),
    pub count: u32,
    private_field: bool,
}

Fields:

  ◦ field: [String](https://doc.rust-lang.org/nightly/alloc/string/struct.String.html)
    A public field

  ◦ count: u32
    Another public field

  ◦ private_field: bool
    A private field

Methods

  ◦ pub const ASSOCIATED_CONST
    This is an associated constant for a struct

  ◦ pub fn [new](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.new)(field: [String](https://doc.rust-lang.org/nightly/alloc/string/struct.String.html), count: u32) -> Self
    Create a new TestStruct

  ◦ pub fn [get_field](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.get_field)(&self) -> &str
    Get the field value

  ◦ pub fn [increment_count](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.increment_count)(&mut self)
    Update the count

Trait Implementations

[TestTrait](https://docs.rs/fixture_crate/latest/fixture_crate/index.html?search=fixture%5Fcrate%3A%3ATestTrait)<T = [String](https://doc.rust-lang.org/nightly/alloc/string/struct.String.html)>

std: [Clone](https://doc.rust-lang.org/nightly/core/clone/index.html?search=core%3A%3Aclone%3A%3AClone), [Debug](https://doc.rust-lang.org/nightly/core/fmt/index.html?search=core%3A%3Afmt%3A%3ADebug), [Freeze](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3AFreeze), [From](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3AFrom)<Self>, [RefUnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/index.html?search=core%3A%3Apanic%3A%3Aunwind%5Fsafe%3A%3ARefUnwindSafe), [Send](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3ASend), [Sync](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3ASync), [Unpin](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3AUnpin), 
[UnsafeUnpin](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3AUnsafeUnpin), [UnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/index.html?search=core%3A%3Apanic%3A%3Aunwind%5Fsafe%3A%3AUnwindSafe)

  ◦ impl [Any](https://doc.rust-lang.org/nightly/core/any/trait.Any.html) where Self: 'static + ?[Sized](https://doc.rust-lang.org/nightly/core/marker/trait.Sized.html)

  ◦ impl [Borrow](https://doc.rust-lang.org/nightly/core/borrow/trait.Borrow.html)<Self> where Self: ?[Sized](https://doc.rust-lang.org/nightly/core/marker/trait.Sized.html)

  ◦ impl [BorrowMut](https://doc.rust-lang.org/nightly/core/borrow/trait.BorrowMut.html)<Self> where Self: ?[Sized](https://doc.rust-lang.org/nightly/core/marker/trait.Sized.html)

  ◦ impl [CloneToUninit](https://doc.rust-lang.org/nightly/core/clone/trait.CloneToUninit.html) where Self: [Clone](https://doc.rust-lang.org/nightly/core/clone/trait.Clone.html)

  ◦ impl<U: [From](https://doc.rust-lang.org/nightly/core/convert/trait.From.html)<Self>> [Into](https://doc.rust-lang.org/nightly/core/convert/trait.Into.html)<U>

  ◦ impl [ToOwned](https://doc.rust-lang.org/nightly/alloc/borrow/trait.ToOwned.html) where Self: [Clone](https://doc.rust-lang.org/nightly/core/clone/trait.Clone.html)
        type Owned = Self

  ◦ impl<U: [Into](https://doc.rust-lang.org/nightly/core/convert/trait.Into.html)<Self>> [TryFrom](https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html)<U>
        type Error = [Infallible](https://doc.rust-lang.org/nightly/core/convert/type.Infallible.html)

  ◦ impl<U: [TryFrom](https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html)<Self>> [TryInto](https://doc.rust-lang.org/nightly/core/convert/trait.TryInto.html)<U>
        type Error = <U as [TryFrom](https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html)<Self>>::Error

Source: /TEST_CRATE_ROOT/src/lib.rs

#[derive(Debug, Clone)]
pub struct TestStruct {
    /// A public field
    pub field: String,
    /// Another public field
    pub count: u32,
    /// A private field
    private_field: bool,
}
