ferritin/src/snapshots/ferritin__tests__get_submodule_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::submodule\"), OutputMode :: Ai, &\nget_fixture_crate_path ())"
---
Module fixture_crate::submodule — in fixture-crate (0.1.0)

A module with items

## Structs

- SubStruct — A struct in a submodule

## Enums

- TestEnum — An enum for testing [+1 lines]

## Functions

- sub_function — A function in a submodule

## Variants

- VariantA — Variant A (see also crate::GenericEnum)
- VariantB — Variant B with data
- VariantC — Variant C with struct data (name and value)
