ferritin/src/snapshots/ferritin__tests__get_submodule_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::submodule\"), OutputMode :: Ai)"
---
Item: submodule
Kind: Module
Visibility: Public
Defined at: fixture_crate::submodule
In crate: fixture-crate (0.1.0)

A module with items

Structs
SubStruct // A struct in a submodule


Enums
TestEnum // An enum for testing [+1 more lines]


Functions
sub_function // A function in a submodule


Variants
VariantA // Variant A (see also crate::GenericEnum)


VariantB // Variant B with data


VariantC // Variant C with struct data (name and value)
