ferritin/src/snapshots/ferritin__tests__get_submodule_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::submodule\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/index.html",
  "meta": {
    "name": "submodule",
    "kind": "module",
    "visibility": "public",
    "definedAt": "fixture_crate::submodule",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "A module with items",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "module",
    "items": [
      {
        "path": "SubStruct",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/struct.SubStruct.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A struct in a submodule",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "sub_function",
        "kind": "function",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/fn.sub_function.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A function in a submodule",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "TestEnum",
        "kind": "enum",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/enum.TestEnum.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "An enum for testing",
                    "style": "Plain"
                  }
                ]
              },
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "This is like ",
                    "style": "Plain"
                  },
                  {
                    "text": "crate::GenericEnum",
                    "style": "InlineCode",
                    "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/enum.GenericEnum.html"
                  },
                  {
                    "text": " but without the generic",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "VariantA",
        "kind": "variant",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Variant A (see also ",
                    "style": "Plain"
                  },
                  {
                    "text": "crate::GenericEnum",
                    "style": "InlineCode",
                    "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/enum.GenericEnum.html"
                  },
                  {
                    "text": ")",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "VariantB",
        "kind": "variant",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Variant B with data",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "VariantC",
        "kind": "variant",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Variant C with struct data (",
                    "style": "Plain"
                  },
                  {
                    "text": "name",
                    "style": "InlineCode"
                  },
                  {
                    "text": " and ",
                    "style": "Plain"
                  },
                  {
                    "text": "value",
                    "style": "InlineCode"
                  },
                  {
                    "text": ")",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      }
    ]
  }
}
